--- a/Dodgem.html
+++ b/Dodgem.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<!--Reference Css-->
 	<link rel="stylesheet" type="text/css" href="./Contents/01_Css/02_Reference/01_Bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./Contents/01_Css/01_Mine/shared.css">
